精選文章區塊

--- a/五倍官網/index.html
+++ b/五倍官網/index.html
@@ -539,6 +539,21 @@
           </div>
         </div>
       </section>
+      <section class="section-5x">
+        <h2 class="section-5x-h2">在五倍，我們一起超越五倍</h2>
+        <div class="section-5x-slide"></div>
+      </section>
+      <section class="section-articles">
+        <h2 class="section-articles-h2">精選文章</h2>
+        <div class="articles-card-list">
+          <div class="card">
+            <img
+              src="https://images.ctfassets.net/8er52l3j5u76/45xkOVh8XI4HGaH1iNRJLs/b38f5ea616fee0775e915220df91e6bc/cover.jpg?q=80"
+              alt="在 Rails 導入 Domain-Driven Design 是解藥還是毒藥"
+            />
+          </div>
+        </div>
+      </section>
     </div>
     <footer>
       <footer class="cop">
