--- a/五倍官網/index.html
+++ b/五倍官網/index.html
@@ -25,6 +25,7 @@
         <a href="#">五倍消息</a>
       </nav>
     </div>
+    <div class="absolute"><i class="bi bi-messenger"></i>向我們詢問</div>
     <div class="wrap">
       <section class="section-yt">
         <picture
